<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/ll_folder" android:layout_width="356dp" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:id="@+id/ll_file" android:background="#8c000000" android:layout_width="match_parent" android:layout_height="48dp">
        <TextView android:textSize="@dimen/size_16dp" android:textColor="#fff" android:gravity="center" android:id="@+id/tv_file_photo" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/image" android:layout_weight="1" android:alpha="0.6"/>
        <TextView android:textSize="@dimen/size_16dp" android:textColor="#fff" android:gravity="center" android:id="@+id/tv_file_audio" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/audio" android:layout_weight="1" android:alpha="0.6"/>
        <TextView android:textSize="@dimen/size_16dp" android:textColor="#fff" android:gravity="center" android:id="@+id/tv_file_video" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/video" android:layout_weight="1" android:alpha="0.6"/>
        <TextView android:textSize="@dimen/size_16dp" android:textColor="#fff" android:gravity="center" android:id="@+id/tv_file_document" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/document" android:layout_weight="1" android:alpha="0.6"/>
        <TextView android:textSize="@dimen/size_16dp" android:textColor="#fff" android:gravity="center" android:id="@+id/tv_file_apk" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/application" android:layout_weight="1" android:alpha="0.6"/>
    </LinearLayout>
    <RelativeLayout android:background="#ffffff" android:layout_width="356dp" android:layout_height="470dp" android:layout_below="@+id/ll_file">
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_photo_album" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_photo_grid" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_media_audio" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_media_video_grid" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_documents" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_program_apk" android:padding="5dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <ProgressBar android:id="@+id/pb_tools_loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true"/>
        <ProgressBar android:id="@+id/pb_doc_loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>
