<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/rl_media_toolbar" android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="40dp" android:layout_alignParentTop="true">
        <ImageView android:id="@+id/iv_media_back" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:src="@drawable/ic_back_dark_selector" android:layout_centerVertical="true"/>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_centerInParent="true">
            <TextView android:textSize="@dimen/size_10sp" android:textColor="@drawable/color_media" android:gravity="center" android:id="@+id/tv_media_video" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_video"/>
            <View android:layout_width="@dimen/size_10dp" android:layout_height="1dp"/>
            <TextView android:textSize="@dimen/size_10sp" android:textColor="@drawable/color_media" android:gravity="center" android:id="@+id/tv_media_audio" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_audio"/>
        </LinearLayout>
    </RelativeLayout>
    <ImageView android:id="@+id/iv_media_line" android:background="#eeeeee" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="@dimen/size_15dp" android:layout_marginRight="@dimen/size_15dp" android:layout_below="@+id/rl_media_toolbar"/>
    <TextView android:textColor="@color/colorAccent" android:gravity="center_vertical" android:id="@+id/tv_media_playing" android:background="@color/c_EFEFF4" android:paddingLeft="22dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="45dp" android:text="@string/media_playing_video" android:drawableLeft="@drawable/ic_playing_video" android:drawablePadding="13dp" android:layout_below="@+id/iv_media_line"/>
    <androidx.viewpager.widget.ViewPager android:id="@+id/vp_media" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/tv_media_playing">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_media_video_grid" android:layout_width="match_parent" android:layout_height="match_parent"/>
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_media_audio" android:layout_width="match_parent" android:layout_height="match_parent"/>
        </RelativeLayout>
    </androidx.viewpager.widget.ViewPager>
    <TextView android:gravity="center" android:id="@+id/tv_media_video_placeholder" android:text="@string/app_name" android:drawableTop="@drawable/ic_empty" android:layout_centerInParent="true" style="@style/style_common_text"/>
</RelativeLayout>
