<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="?attr/colorPrimary" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:gravity="center_horizontal" android:id="@+id/rl_top_center" android:layout_width="match_parent" android:layout_height="wrap_content">
        <include android:id="@+id/vg_about_top" layout="@layout/toolbar"/>
        <ImageView android:id="@+id/tabout" android:layout_width="@dimen/size_80dp" android:layout_height="@dimen/size_80dp" android:layout_marginTop="100dp" android:src="@drawable/ic_app_about" android:layout_below="@+id/vg_about_top" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="20sp" android:textColor="?android:attr/textColorPrimary" android:id="@+id/tv_about_app_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:layout_below="@+id/tabout" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="12sp" android:textColor="@color/c_9a9a9a" android:gravity="center" android:id="@+id/tv_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_below="@+id/tv_about_app_name" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <Button android:textSize="@dimen/update_tv_size" android:textColor="@color/c_9a9a9a" android:id="@+id/btn_about_app_update" android:background="@drawable/bg_white_fill_round_btn_selector" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="@dimen/size_28dp" android:layout_marginTop="70dp" android:text="@string/settings_about_app_update" android:layout_below="@+id/rl_top_center" android:layout_centerHorizontal="true"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/ll_privacy" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@+id/tv_copy_name" android:layout_centerHorizontal="true">
        <TextView android:textSize="12sp" android:textColor="@color/about_tv_selector" android:gravity="right" android:id="@+id/tv_about_privacy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/size_10dp" android:layout_marginBottom="10dp" android:text="@string/settings_about_privacy"/>
        <TextView android:textSize="@dimen/size_12sp" android:textColor="@color/c_66000000" android:gravity="center" android:id="@+id/tv_about_center_anchor" android:layout_width="4dp" android:layout_height="wrap_content" android:layout_marginBottom="4dp" android:text="|" android:height="@dimen/size_30dp"/>
        <TextView android:textSize="12sp" android:textColor="@color/about_tv_selector" android:gravity="left" android:id="@+id/tv_about_terms" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/size_10dp" android:layout_marginBottom="10dp" android:text="@string/settings_about_service_terms"/>
    </LinearLayout>
    <TextView android:textSize="12sp" android:gravity="center" android:autoLink="web" android:id="@+id/tv_copy_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="BOXLIGHT, Inc." android:layout_above="@+id/tv_about_copyright" android:layout_centerHorizontal="true" android:lineSpacingExtra="@dimen/size_5dp"/>
    <TextView android:textSize="12sp" android:gravity="center" android:autoLink="web" android:id="@+id/tv_about_copyright" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="www.boxlight.com" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:lineSpacingExtra="@dimen/size_5dp"/>
</RelativeLayout>
